// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|stories/StoriesPanel default 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel storiesHierarchies exists but is empty 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel when open on mobile device 1`] = `
<div
  class="css-nk32ej"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel with storiesHierarchies prop 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
  <div
    class="css-7w6khc"
  >
    <ul
      class="css-h3ek8a"
    >
      <li
        class="css-79elbk"
      >
        <span>
          <ul
            class="css-vq3qyb"
          >
            <li
              class="css-79elbk"
            >
              <div
                data-name="kk"
                role="menuitem"
                style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                tabindex="0"
              >
                <div>
                  <div
                    style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                  >
                    <div
                      style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                    >
                      <svg
                        fill="currentColor"
                        height="10"
                        preserveAspectRatio="xMidYMid meet"
                        style="vertical-align:top;fill:currentcolor"
                        viewBox="0 0 40 40"
                        width="10"
                      >
                        <g>
                          <path
                            d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                  <div
                    class="css-1si3szf"
                  >
                    <div
                      class="css-h8sbw5"
                    >
                      kk
                    </div>
                  </div>
                </div>
              </div>
              <span>
                <ul
                  class="css-vq3qyb"
                >
                  <li
                    class="css-79elbk"
                  >
                    <a
                      class="css-oato19"
                      href="?selectedKind=kk&selectedStory=bb&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                    >
                      <div>
                        <div
                          class="css-1si3szf"
                        >
                          <div
                            class="css-0"
                          >
                            bb
                          </div>
                        </div>
                      </div>
                    </a>
                    <span />
                  </li>
                </ul>
              </span>
            </li>
          </ul>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
